created create post page created my posts made modifications fixed some bugs

--- a/src/Profile.html
+++ b/src/Profile.html
@@ -17,7 +17,7 @@
         <nav class="bg-primary border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900 ">
             <div class="container flex flex-wrap items-center justify-between mx-auto">
                 <a href="#" class="flex items-center">
-                    <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Flowbite Logo" />
+                    <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Logo" />
                     <span class="self-center text-xl font-semibold whitespace-nowrap text-white">Weblog</span>
                 </a>
                 <button id="navbar_button" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -371,6 +371,6 @@
         </div>
 
     </footer>
-    <script src="script.js"></script>
+    <script src="main_nav.js"></script>
 </body>
 </html>
