--- a/src/home.html
+++ b/src/home.html
@@ -345,6 +345,6 @@
 
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="main_nav.js"></script>
 </body>
 </html>
